[package]
name = "cat-llm"
version = "1.1.1"
edition = "2024"
description = "A fast, lightweight Rust CLI tool to concatenate files for LLM context windows."
authors = ["Huy Nguyen <huy.nguyen7994@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Huy1Ng/cat-llm"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.25.0"
